Refactor player connection handling to improve session dimension patching and Netty interceptor injection